<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customer_home_page"
    android:background="?attr/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:orientation="horizontal">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/fastFood"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:backgroundTint="?attr/button_color"
                            android:layout_margin="1dp"
                            android:drawableTop="@drawable/ic_burger"
                            android:text="Fast Food"
                            android:textColor="?attr/text_color"
                            android:textSize="9dp" />

                        <Button
                            android:id="@+id/Healthy"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="1dp"
                            android:backgroundTint="?attr/button_color"
                            android:drawableTop="@drawable/ic_salad"
                            android:text="Healthy"
                            android:textColor="?attr/text_color"
                            android:textSize="9dp" />

                        <Button
                            android:id="@+id/dessert"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:backgroundTint="?attr/button_color"
                            android:layout_margin="1dp"
                            android:drawableTop="@drawable/ic_dessert"
                            android:text="Desserts"
                            android:textColor="?attr/text_color"
                            android:textSize="9dp" />


                        <Button
                            android:id="@+id/CoffeeAndTea"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="1dp"
                            android:backgroundTint="?attr/button_color"
                            android:drawableTop="@drawable/ic_breakfast"
                            android:text="Coffee&amp;Tea"
                            android:textColor="?attr/text_color"
                            android:textSize="9dp" />

                        <Button
                            android:id="@+id/VeganButton"
                            android:layout_width="100dp"
                            android:layout_margin="1dp"
                            android:layout_height="100dp"
                            android:backgroundTint="?attr/button_color"
                            android:drawableTop="@drawable/ic_vegansvg"
                            android:text="Vegan"
                            android:textColor="?attr/text_color"
                            android:textSize="9dp" />

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

            <ImageButton
                android:id="@+id/cola_ad"
                android:layout_width="400dp"
                android:layout_height="175dp"
                android:adjustViewBounds="true"
                android:backgroundTint="@color/white"
                android:layout_marginLeft="0dp"
                android:layout_gravity="center"
                android:src="@drawable/coke"
                android:layout_marginBottom="5dp"

                android:text="AD" />

            <TextView
                android:id="@+id/NearYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:fillViewport="true"
                android:text="Recommended "
                android:textColor="?attr/text_color"
                android:textSize="25dp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/businessHorizRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/topDeals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Top deals"
                android:textColor="?attr/text_color"
                android:textSize="25dp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/businessHorizRecyclerViewDeals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <TextView
                android:id="@+id/MoreBusi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fillViewport="true"
                android:text="All Businesses"
                android:layout_marginStart="5dp"
                android:textColor="?attr/text_color"
                android:textSize="25dp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/businessRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
